# gitocommito

./: .gitignore  .vscodeignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
gitocommito/: gito.py
src/: extension.ts  gitCommands.ts
src/commands/: generateCommitMessage.ts  setOpenAIKey.ts
src/git/: getStagedChanges.ts  gitAPI.ts  gitCommands.ts  runGitCommands.ts
src/lib/: gitCommands.ts  gitocommito.ts
src/openai/: client.ts  client_helper.ts  configureOpenAI.ts  prompts.ts
src/tests/: generateCommitMessage.test.ts
src/vendors/: git.d.ts
