[tool.poetry]
name = "gitocommito"
version = "0.1.0"
description = ""
authors = ["miguelvalente <miguelvalente@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.6"
langchain = "^0.0.161"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
